hphp/hack/test/typecheck/expression_trees/boolean_check.php.exp
File "boolean_check.php", line 53, characters 7-33:
You are trying to access the method `__barbar` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 5, characters 27-31:
  This can be null
File "boolean_check.php", line 54, characters 7-33:
You are trying to access the method `__barbar` but this is a bool (Typing[4062])
  File "boolean_check.php", line 6, characters 20-23:
  Definition is here
File "boolean_check.php", line 55, characters 7-26:
You are trying to access the method `__barbar` but this is a bool (Typing[4062])
  File "boolean_check.php", line 6, characters 20-23:
  Definition is here
File "boolean_check.php", line 58, characters 7-33:
You are trying to access the method `__ampamp` but this object can be null. (Typing[4064])
  File "boolean_check.php", line 5, characters 27-31:
  This can be null
File "boolean_check.php", line 59, characters 7-33:
You are trying to access the method `__ampamp` but this is a bool (Typing[4062])
  File "boolean_check.php", line 6, characters 20-23:
  Definition is here
File "boolean_check.php", line 60, characters 7-26:
You are trying to access the method `__ampamp` but this is a bool (Typing[4062])
  File "boolean_check.php", line 6, characters 20-23:
  Definition is here
